--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">WeatherApp</string>
     <string name="city">Калининград</string>
     <string name="date">7 июля</string>
-    <string name="day_night">Днём 16 c | Ночью 12 c</string>
-    <string name="cur_temp">16 c</string>
-    <string name="feel_temp">ощущается как 18 с</string>
+    <string name="day_night">Днём 16°c | Ночью 12°c</string>
+    <string name="cur_temp">16°c</string>
+    <string name="feel_temp">ощущается как 18°с</string>
     <string name="weather_type">Облачно</string>
     <string name="tomorrow">завтра</string>
     <string name="third_day">9 июля</string>
@@ -16,10 +16,32 @@
     <string name="fourth_day_weath_type">Солнечно</string>
     <string name="fifth_day_weath_type">Облачно</string>
     <string name="sixth_day_weath_type">Облачно</string>
-    <string name="tomorrow_day_night">16 с | 12 c</string>
-    <string name="third_day_day_night">16 с | 12 с</string>
-    <string name="fourth_day_day_night">16 с | 12 с</string>
-    <string name="fifth_day_day_night">16 с | 12 с</string>
-    <string name="sixth_day_day_night">16 с | 12 с</string>
+    <string name="tomorrow_day_night">16°с | 12°c</string>
+    <string name="third_day_day_night">16°с | 12°c</string>
+    <string name="fourth_day_day_night">16°с | 12°c</string>
+    <string name="fifth_day_day_night">16°с | 12°c</string>
+    <string name="sixth_day_day_night">16°с | 12°c</string>
     <string name="future_day_night">День | Ночь</string>
+    <string name="choose_city">Выберите город:</string>
+    <string name="wind_speed">Показывать скорость ветра</string>
+    <string name="pressure">Показывать атмосферное давление</string>
+    <string name="accept">Применить</string>
+    <string name="settings">Настройки</string>
+    <string name="dark_theme">Тёмная тема</string>
+    <string name="temperature">Единицы измерения температуры:</string>
+    <string name="C">°C</string>
+    <string name="F">°F</string>
+    <string name="wind_speed_count">Единицы измерения скорости ветра:</string>
+    <string name="wind_speed_count_1">м/с</string>
+    <string name="wind_speed_count_2">км/ч</string>
+
+    <string-array name="cities">
+        <item>Калининград</item>
+        <item>Москва</item>
+        <item>Свнкт-Петербург</item>
+        <item>Новосибирск</item>
+        <item>Красноярск</item>
+        <item>Тверь</item>
+    </string-array>
+
 </resources>
