Android. Базовый уровень. Практчиеское задание №3

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -35,6 +35,10 @@
     <string name="wind_speed_count">Wind speed units:</string>
     <string name="wind_speed_count_1">m/s</string>
     <string name="wind_speed_count_2">km/h</string>
+    <string name="city_choose_btn">choose city</string>
+    <string name="settings_btn">settings</string>
+    <string name="settings_accept">accept</string>
+    <string name="info">city info</string>
 
     <string-array name="cities">
         <item>Kaliningrad</item>
