Android. Базовый уровень. Практчиеское задание №3

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -35,7 +35,7 @@
     <string name="wind_speed_count">Wind speed units:</string>
     <string name="wind_speed_count_1">m/s</string>
     <string name="wind_speed_count_2">km/h</string>
-    <string name="city_choose_btn">choose city</string>
+    <string name="city_choose">Choose city</string>
     <string name="settings_btn">settings</string>
     <string name="settings_accept">accept</string>
     <string name="info">city info</string>
@@ -47,6 +47,9 @@
         <item>Novosibirsk</item>
         <item>Krasnoyarsk</item>
         <item>Twer</item>
+        <item>Omsk</item>
+        <item>Krasnodar</item>
+        <item>Archangelsk</item>
     </string-array>
 
 </resources>
