--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="wind_speed_count">Единицы измерения скорости ветра:</string>
     <string name="wind_speed_count_1">м/с</string>
     <string name="wind_speed_count_2">км/ч</string>
-    <string name="city_choose_btn">выбрать город</string>
+    <string name="city_choose">Выберите город</string>
     <string name="settings_btn">настройки</string>
     <string name="settings_accept">применить</string>
     <string name="info">О городе</string>
@@ -46,6 +46,9 @@
         <item>Новосибирск</item>
         <item>Красноярск</item>
         <item>Тверь</item>
+        <item>Омск</item>
+        <item>Краснодар</item>
+        <item>Архангельск</item>
     </string-array>
 
 </resources>
