--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -52,4 +52,12 @@
         <item>Archangelsk</item>
     </string-array>
 
+    <string-array name="days">
+        <item>Tomorow</item>
+        <item>day after tomorrow</item>
+        <item>after two days</item>
+        <item>after three days</item>
+        <item>after four days</item>
+    </string-array>
+
 </resources>
